--- a/manifest.yml
+++ b/manifest.yml
@@ -1,9 +1,9 @@
 ---
 applications:
 - name: cf-chat-websocket
-  host: cf-chat-websocket-${random-word}
+  host: cf-chat-websocket-tdeng
   memory: 256M
-  instances: 2
+  instances: 1
   path: ./
   services:
   - redis
