--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cf-chat-websocket",
   "version": "0.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "websocket": "1.0.x"
   }
